--- a/Flask_Framework/templates/login.html
+++ b/Flask_Framework/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/Flask_Framework/static/login_style.css">
+    <link rel="stylesheet" href="static/login_style.css">
     <link rel="icon" type="image/x-icon"
         href="https://static-00.iconduck.com/assets.00/user-icon-1024x1024-dtzturco.png">
 </head>
